clusters/lovenet/apps/crypto/geth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geth
  namespace: crypto
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx

  rules:
    - host: &host "geth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geth
                port:
                  number: 8545

  tls:
    - hosts:
        - *host
